# cvapp

./: .gitignore  CMakeLists.txt  CMakePresets.json  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native_process.cpp
android/app/src/main/kotlin/com/example/cvapp/: MainActivity.kt
lib/: main.dart
lib/bridge/: bridge.dart  native_process.dart
lib/native/: native_control.dart  native_process.dart
src/: CMakeLists.txt  docscan.hpp  lum_doc.cpp  main.cpp  tool.cpp  tools.hpp
test/: widget_test.dart
